--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,14 @@ env:
   - PUPPET_GEM_VERSION="~> 3.6.0"
   - PUPPET_GEM_VERSION="~> 3.7.0"
   - PUPPET_GEM_VERSION="~> 3.8.0"
-  - PUPPET_GEM_VERSION="~> 4.0"
+  - PUPPET_GEM_VERSION="~> 4.4.0"
+  - PUPPET_GEM_VERSION="~> 4.6.0"
 matrix:
   exclude:
     - rvm: 1.8.7
-      env: PUPPET_GEM_VERSION="~> 4.0"
+      env: PUPPET_GEM_VERSION="~> 4.4.0"
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 4.6.0"
     - rvm: 2.2.5
       env: PUPPET_GEM_VERSION="~> 3.4.0"
     - rvm: 2.3.1
